# DevUtility

./: .gitignore  CLA-CORPORATE.md  CLA-INDIVIDUAL.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.COMMERCIAL  Makefile  README.md  README_CN.md  crowdin.yaml  index.html  lingui.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
.cargo/: config.toml
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: cla-signature.md
.github/workflows/: build-app.yml  cla.yml  crodwin.yml  crowdin.yml
crates/universal-function-macro/: Cargo.toml
crates/universal-function-macro/src/: lib.rs
scripts/: bump-version.ts  merge-license.ts
src/: app.tsx  i18n.tsx  index.css  index.tsx  main.tsx  router.tsx  tauri.d.ts  tauri.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/utilities/: codec.rs  formatters.rs  generators.rs  mod.rs
src-tauri/src/utility/: codec.rs  formatter.rs  generator.rs  mod.rs
src-utility/: Cargo.toml
src-utility/src/: error.rs  lib.rs
src-utility/src/core/: codec.rs  cryptography.rs  demo.rs  generator.rs  mod.rs
src-utility/src/core/cryptography/: hash.rs  mod.rs  rsa.rs
src-utility/tests/: web.rs
src/components/sidebar/: index.tsx  locale-switcher.tsx  search-form.tsx  theme-switcher.tsx
src/components/ui/: button.tsx  card.tsx  checkbox.tsx  dropdown-menu.tsx  input.tsx  label.tsx  radio-group.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  textarea.tsx  tooltip.tsx
src/hooks/: use-mobile.ts
src/lib/: copyboard.ts  utils.ts
src/locales/en/: messages.po
src/locales/en-US/: messages.po
src/locales/zh-CN/: messages.po
src/utilities/: invoke.ts  types.ts
src/utilities/codec/: base64.tsx
src/utilities/cryptography/rsa/: analyzer.tsx  basic-tools.tsx  generator.tsx
src/utilities/cryptography/rsa-tools/: rsa-debugger.tsx
src/utilities/formatter/: css.tsx  html.tsx  js.tsx  json.tsx
src/utilities/generators/: hash.tsx  id.tsx
