[package]
name = "utility-dev"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "utility_dev_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.6.0"

# ID Generators
uuid-simd = "0.8.0"
uuid = { version = "1.17", features = [
  "v1",
  "v3",
  "v4",
  "v5",
  "v6",
  "v7",
  "v8",
  "serde",
] }
ulid = "1.2.1"
nanoid = "0.4.0"

# Hash Generators
sha3 = "0.10"
sha2 = "0.10"
md5 = "0.7"
sha1 = "0.10"
tiny-keccak = { version = "2.0", features = ["sha3"] }
hex = "0.4"
rayon = "1.8"

# Formatters
sonic-rs = "0.5.1"
tauri-plugin-clipboard-manager = "2"
