[package]
name = "dev-utility-desktop"
version = "0.1.2"
authors = ["AprilNEA  <github@sku.moe>"]
description = "⚡ Universal developer toolkit for software, hardware, and security professionals."
license-file = "../LICENSE"
repository = "https://github.com/AprilNEA/DevUtility"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "utility_dev_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { workspace = true, features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
dev-utility-core = { path = "../src-utility", features = ["desktop"] }

serde = { workspace = true }
serde_json = { workspace = true }
window-vibrancy = "0.6.0"
rayon = "1.7"
# ID Generators
uuid-simd = "0.8.0"
uuid = { version = "1.17", features = [
  "v1",
  "v3",
  "v4",
  "v5",
  "v6",
  "v7",
  "v8",
  "serde",
] }
ulid = "1.2.1"
nanoid = "0.4.0"

# Hash Generators
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
md2 = "0.10"
md4 = "0.10"
md-5 = "0.10"
digest = "0.10"
hex = "0.4"
tiny-keccak = { version = "2.0", features = ["sha3"] }

# Formatters
sonic-rs = "0.5.1"

# Encoders
base64 = "0.22.1"

# Decoders
jsonwebtoken = "9.3.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
